pom.xml. added H2 DB.